kubernetes/platform/routes/backrest-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backrest
  namespace: backrest
spec:
  hostnames:
    - backrest.mashu.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: backrest
          port: 9898
