kubernetes/platform/routes/rancher-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  hostnames:
    - rancher.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: rancher
          port: 80
